[package]
name = "pegnetd"
version = "0.1.1"
authors = ["Mitchell <17392435+MitchellBerry@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "readme.md"
repository = "https://github.com/kompendium-llc/pegnetd-rust-client"
homepage = "https://github.com/kompendium-llc/pegnetd-rust-client"

description = "Pegnetd API client"

[dependencies]
serde_json = "1.0.41"
serde_derive = "1.0.102"
serde = { version = "1.0.102", features = ["derive"] }
reqwest = {version = "0.10.0-alpha.2", features = ["json"]}
tokio = { version = "0.2.0-alpha.6" }
